--- a/css/base.css
+++ b/css/base.css
@@ -3,3 +3,19 @@
 /* FONTS */
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,900);
+
+.body{
+  font-family: "Lato";	
+}
+
+.WhatWeCanDo{
+  font-family: "Raleway";
+}
+
+.OurLatestWork{
+  font-family: "Raleway";
+}
+
+.OurSkills{
+  font-family: "Raleway";
+}
