--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
   clear: both;
 }
 
+.body{
+  font-family: "Lato";	
+}
+
 .inner{
   color: #333;
   width: 1100px;
@@ -17,6 +21,7 @@
   padding: 15px 0;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 
 .fa-bolt{
@@ -40,6 +45,7 @@
 
 .main{
   text-align: center;
+  padding-top: 70px;
 }
 
 .title{
@@ -138,7 +144,6 @@
 .text-Email{
   font-size: 20px;
   line-height: 1.5;
-  margin-right: 90px;
 }
 
 .Email-button{
@@ -147,6 +152,7 @@
   color: #fff;
   font-size: 12px;
   padding: 14px 20px;
+  margin-left: 90px;
   text-decoration: none;
   transition: all 0.3s;
 }
@@ -253,10 +259,6 @@
   margin-bottom: 0;
 }
 
-.WhatWeCanDo-comment br{
-  display: none;
-}
-
 .PG_nav_item{
   display: block;
   margin: 0;
@@ -275,17 +277,10 @@
   margin-top: 80px;
 }
 
-.text-Email{
-  margin-right: 0;
-}
-
-.text-Email br{
-  display: none;
-}
-
 .Email-button{
   display: inline-block;
   margin-top: 40px;
+  margin-left: 0;
 }
 
 .OS_nav_item{
@@ -352,10 +347,6 @@
   line-height: 1.5;
   margin-top: 35px;
   width: 480px;
-}
-
-.WhatWeCanDo-comment br{
-  display: none;
 }
 
 .Sns-inner{
