--- a/css/base.css
+++ b/css/base.css
@@ -4,14 +4,14 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,900);
 
-.body{
+body{
   font-family: "Lato";	
 }
 
-.title{
-   font-family: "Raleway";
+.CommonTitle{
+  font-family: "Raleway";
 }
-
+/* 
 .WhatWeCanDo{
   font-family: "Raleway";
 }
@@ -22,4 +22,4 @@
 
 .OurSkills{
   font-family: "Raleway";
-}
+} */
