--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,6 @@
   clear: both;
 }
 
-.body{
-  font-family: "Lato";	
-}
-
 .inner{
   color: #333;
   width: 1100px;
@@ -20,7 +16,7 @@
   background-color: #fff;
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 1000;
 }
 
 .header-inner{
@@ -32,18 +28,21 @@
   font-size: 40px;
 }
 
-.Contact-button{
+.Base-button{
   background-color: #74cfae;
   color: #fff;
-  float: right;
   font-size: 12px;
-  padding: 14px 12px;
   text-decoration: none;
-  transition: color 0.3s;
 }
 
-.Contact-button:hover{
+.Base-button:hover{
   color: #333;
+}
+
+.Contact-button{
+  float: right;
+  padding: 14px 12px;
+  transition: color 0.3s;
 }
 
 .BurgerMenu{
@@ -85,6 +84,10 @@
   justify-content: space-around;
   padding: 50px 0;
   padding-bottom: 0;
+}
+
+.WhatWeCanDo-block-second{
+  padding-top: 20px;
 }
 
 .WhatWeCanDo{
@@ -161,17 +164,9 @@
 
 .Email-button{
   border: 0;
-  background-color: #74cfae;
-  color: #fff;
-  font-size: 12px;
   padding: 14px 20px;
   margin-left: 90px;
-  text-decoration: none;
   transition: all 0.3s;
-}
-
-.Email-button:hover{
-  color: #333;
 }
 
 .section-OurSkills{
@@ -262,6 +257,10 @@
     padding-bottom: 25px;
   }
 
+  .WhatWeCanDo-block-second{
+    padding-top: 0;
+  }
+
   .WhatWeCanDo{
     margin-top: 20px;
   }
@@ -332,6 +331,7 @@
     border: 1px solid #ddd;
     border-radius: 4px;
   }
+
   .Burger_line{
     position: absolute;
     left: 10px;
@@ -339,12 +339,15 @@
     height: 3px;
     background-color: #ddd;
   }
+
   .Burger_line1{
     top: 11px;
   }
+
   .Burger_line2{
     top: 19px;
   }
+
   .Burger_line3{
     top: 27px;
   }
@@ -359,17 +362,10 @@
     padding-bottom: 130px;
   }
 
-  .sub-title{
-    color: #c0c0c0;
-    font-size: 30px;
-    margin-top: 20px;
-  }
-
   .WhatWeCanDo-comment{
     font-size: 20px;
     line-height: 1.5;
     margin-top: 35px;
-    width: 480px;
   }
 
   .Sns-inner{
